--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,11 +1,46 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col bg-dark text-white">
-      <a class="navbar-brand" href="">SPORTS STORE</a>
+      <a class="navbar-brand">SPORTS STORE</a>
     </div>
   </div>
-  <div class="row text-white">
-    <div class="col-3 bg-info p-2">{{ categories.length }} Category</div>
-    <div class="col-9 bg-success p-2">{{ products.length }} Products</div>
+
+  <div class="row">
+    <div class="col-3 p-2">
+      <button
+        class="btn btn-block btn-outline-primary"
+        (click)="changeCategory()"
+      >
+        HOME
+      </button>
+      <button
+        *ngFor="let cat of categories"
+        class="btn btn-block btn-outline-primary btn-block"
+        [class.active]="cat == selectedCategory"
+        (click)="changeCategory(cat)"
+      >
+        {{ cat }}
+      </button>
+    </div>
+
+    <div class="col-9 p-2">
+      <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
+
+        <h4>
+          {{ product.name }}
+          <span class="badge badge-pill badge-primary float-right">
+            {{ product.price | currency: "USD":"symbol":"2.2-2" }}
+          </span>
+          <!-- <span class="badge badge-pill badge-primary float-left">
+            {{product.price | addTax:(20)}}
+          </span> -->
+        </h4>
+
+        <div class="card-text bg-white p-1">
+          {{ product.description | titlecase }}
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
