--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -10,22 +10,23 @@
       <button
         class="btn btn-block btn-outline-primary"
         (click)="changeCategory()"
+        (click)="changePage(1)"
       >
         HOME
       </button>
       <button
-        *ngFor="let cat of categories"
+        *ngFor="let category of categories"
         class="btn btn-block btn-outline-primary btn-block"
-        [class.active]="cat == selectedCategory"
-        (click)="changeCategory(cat)"
+        [class.active]="category == selectedCategory"
+        (click)="changeCategory(category)"
+        (click)="changePage(1)"
       >
-        {{ cat }}
+        {{ category }}
       </button>
     </div>
 
     <div class="col-9 p-2">
       <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
-
         <h4>
           {{ product.name }}
           <span class="badge badge-pill badge-primary float-right">
@@ -39,7 +40,28 @@
         <div class="card-text bg-white p-1">
           {{ product.description | titlecase }}
         </div>
-
+      </div>
+      <div class="form-inline float-left mr-1">
+        <select
+          class="form-control"
+          [value]="productsPerPage"
+          (change)="changePageSize($event.target.value)"
+        >
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="6">6</option>
+          <option value="8">8</option>
+        </select>
+      </div>
+      <div class="btn-group float-right">
+        <button
+          *ngFor="let page of pageNumbers"
+          (click)="changePage(page)"
+          class="btn btn-outline-primary"
+          [class.active]="page == selectedPage"
+        >
+          {{ page }}
+        </button>
       </div>
     </div>
   </div>
