--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
+      <cart-summary></cart-summary>
     </div>
   </div>
 
@@ -38,6 +39,13 @@
         </h4>
 
         <div class="card-text bg-white p-1">
+          <button
+            class="btn btn-success btn-sm float-right"
+            (click)="addProductToCart(product)"
+          ></button>
+        </div>
+
+        <div class="card-text bg-white p-1">
           {{ product.description | titlecase }}
         </div>
       </div>
@@ -54,10 +62,16 @@
         </select>
       </div>
       <div class="btn-group float-right">
-        <button
+        <!-- <button
+          class="btn btn-outline-primary"
           *ngFor="let page of pageNumbers"
           (click)="changePage(page)"
+          [class.active]="page == selectedPage"
+        > -->
+        <button
           class="btn btn-outline-primary"
+          *counter="let page of pageCount"
+          (click)="changePage(page)"
           [class.active]="page == selectedPage"
         >
           {{ page }}
