--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -39,14 +39,13 @@
         </h4>
 
         <div class="card-text bg-white p-1">
+          {{ product.description | titlecase }}
           <button
             class="btn btn-success btn-sm float-right"
             (click)="addProductToCart(product)"
-          ></button>
-        </div>
-
-        <div class="card-text bg-white p-1">
-          {{ product.description | titlecase }}
+          >
+            Add to cart
+          </button>
         </div>
       </div>
       <div class="form-inline float-left mr-1">
