--- a/src/app/store/cartDetail.component.html
+++ b/src/app/store/cartDetail.component.html
@@ -67,7 +67,7 @@
         <button
           class="btn btn-secondary m-1"
           routerLink="/checkout"
-          [disabled]="cart.lines.length > 0"
+          [disabled]="cart.lines.length == 0"
         >
           Checkout
         </button>
