--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg-secondary">
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-3 p-2">
       <button
-        class="btn btn-block btn-outline-primary"
+        class="btn btn-block btn-outline-dark bg-warning"
         (click)="changeCategory()"
         (click)="changePage(1)"
       >
@@ -17,7 +17,7 @@
       </button>
       <button
         *ngFor="let category of categories"
-        class="btn btn-block btn-outline-primary btn-block"
+        class="btn btn-block btn-outline-dark bg-warning btn-block"
         [class.active]="category == selectedCategory"
         (click)="changeCategory(category)"
         (click)="changePage(1)"
@@ -30,10 +30,10 @@
       <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
         <h4>
           {{ product.name }}
-          <span class="badge badge-pill badge-primary float-right">
+          <span class="badge badge-pill badge-success float-right">
             {{ product.price | currency: "USD":"symbol":"2.2-2" }}
           </span>
-          <!-- <span class="badge badge-pill badge-primary float-left">
+          <!-- <span class="badge badge-pill badge-dark float-left">
             {{product.price | addTax:(20)}}
           </span> -->
         </h4>
@@ -41,7 +41,7 @@
         <div class="card-text bg-white p-1">
           {{ product.description | titlecase }}
           <button
-            class="btn btn-success btn-sm float-right"
+            class="btn btn-warning btn-sm float-right"
             (click)="addProductToCart(product)"
           >
             Add to cart
@@ -50,7 +50,7 @@
       </div>
       <div class="form-inline float-left mr-1">
         <select
-          class="form-control"
+          class="form-control btn-outline-dark bg-warning"
           [value]="productsPerPage"
           (change)="changePageSize($event.target.value)"
         >
@@ -62,13 +62,13 @@
       </div>
       <div class="btn-group float-right">
         <!-- <button
-          class="btn btn-outline-primary"
+          class="btn btn-outline-dark"
           *ngFor="let page of pageNumbers"
           (click)="changePage(page)"
           [class.active]="page == selectedPage"
         > -->
         <button
-          class="btn btn-outline-primary"
+          class="btn btn-outline-dark bg-warning"
           *counter="let page of pageCount"
           (click)="changePage(page)"
           [class.active]="page == selectedPage"
