--- a/src/app/store/cartDetail.component.html
+++ b/src/app/store/cartDetail.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg-secondary">
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
@@ -7,8 +7,8 @@
 
   <div class="row">
     <div class="col mt-2">
-      <h2 class="text-center">Your cart</h2>
-      <table class="table table-bordered table-striped p-2">
+      <h2 class="text-center text-light">Your cart</h2>
+      <table class="table table-bordered table-striped p-2 bg-light">
         <thead>
           <tr>
             <th>Amount</th>
@@ -63,9 +63,9 @@
   <div class="row">
     <div class="col">
       <div class="text-center">
-        <button class="btn btn-primary m-1" routerLink="/store">Store</button>
+        <button class="btn btn-outline-dark bg-warning m-1" routerLink="/store">Store</button>
         <button
-          class="btn btn-secondary m-1"
+          class="btn btn-outline-dark bg-success m-1"
           routerLink="/checkout"
           [disabled]="cart.lines.length == 0"
         >
