--- a/src/app/store/checkout.component.html
+++ b/src/app/store/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg-secondary">
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
@@ -14,12 +14,11 @@
     <form
       *ngIf="!orderSent"
       #form="ngForm"
-      novalidate
-      (ngSubmit)="submitOrder(form)"
+      novalidate (ngSubmit)="submitOrder(form)"
       class="m-2"
     >
       <div class="form-group">
-        <label>Name</label>
+        <label class="text-light">Name</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -50,7 +49,7 @@
         </ul> -->
       </div>
       <div class="form-group">
-        <label>Address</label>
+        <label class="text-light">Address</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -63,7 +62,7 @@
         </span>
       </div>
       <div class="form-group">
-        <label>City</label>
+        <label class="text-light">City</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -76,7 +75,7 @@
         </span>
       </div>
       <div class="form-group">
-        <label>State</label>
+        <label class="text-light">State</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -89,7 +88,7 @@
         </span>
       </div>
       <div class="form-group">
-        <label>Zip</label>
+        <label class="text-light">Zip</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -102,7 +101,7 @@
         </span>
       </div>
       <div class="form-group">
-        <label>Country</label>
+        <label class="text-light">Country</label>
         <input
           class="form-control"
           #name="ngModel"
@@ -115,8 +114,8 @@
         </span>
       </div>
       <div class="text-center">
-        <button class="btn btn-secondary m-1" routerLink="/cart">Return</button>
-        <button class="btn btn-primary m-1" type="submit">
+        <button class="btn btn-outline-dark btn-warning m-1" routerLink="/cart">Return</button>
+        <button class="btn btn-outline-dark bg-success m-1" type="submit">
           Complete Order
         </button>
       </div>
