auth.service.ts added

--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -24,6 +24,7 @@
       >
         {{ category }}
       </button>
+      <button class="btn btn-block btn-danger" routerLink="/admin">lolololololol</button>
     </div>
 
     <div class="col-9 p-2">
