checkout.component.html fixed

--- a/src/app/store/checkout.component.html
+++ b/src/app/store/checkout.component.html
@@ -6,33 +6,44 @@
   </div>
 
   <div *ngIf="orderSent" class="m-2 text-center">
-    <h2>Thank You</h2>
     <p>Thank you for your purchase</p>
     <button class="btn btn-primary" routerLink="/store">Store</button>
   </div>
-  <div>
-    <form
-      *ngIf="!orderSent"
-      #form="ngForm"
-      novalidate (ngSubmit)="submitOrder(form)"
-      class="m-2"
-    >
-      <div class="form-group">
-        <label class="text-light">Name</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="name"
-          [(ngModel)]="order.name"
-          required
-          minlength="3"
-          maxlength="128"
-          pattern="^[a-zA-Z]+$"
-        />
-        <span *ngIf="submitted && name.invalid" class="text-danger"
-          >Please type in your name
-        </span>
-        <!-- <ul
+  <form
+    *ngIf="!orderSent"
+    #form="ngForm"
+    novalidate
+    (ngSubmit)="submitOrder(form)"
+    class="m-2"
+  >
+    <div class="form-group">
+      <label class="text-light">Name</label>
+      <input
+        class="form-control"
+        #name="ngModel"
+        name="name"
+        [(ngModel)]="order.name"
+        required
+        minlength="3"
+        maxlength="128"
+        pattern="^[a-zA-Z ]+$"
+      />
+      <ul class="text-danger list-unstyled" *ngIf="name.dirty && name.invalid">
+        <li *ngIf="name.errors.required">Please type in your name</li>
+        <li *ngIf="name.errors.pattern">
+          Please type in your name with letters
+        </li>
+        <li *ngIf="name.errors.minlength">
+          Please type in your name with 3 or more characters
+        </li>
+        <li *ngIf="name.errors.maxlength">
+          Please type in your name with less than 128 characters
+        </li>
+      </ul>
+      <!-- <span *ngIf="submitted && name.invalid" class="text-danger"
+        >Please type in your name
+      </span> -->
+      <!-- <ul
           class="text- danger-list-unstyled"
           *ngIf="name.dirty && name.invalid"
         >
@@ -47,78 +58,79 @@
             Please type in your name with less than 128 characters
           </li>
         </ul> -->
-      </div>
-      <div class="form-group">
-        <label class="text-light">Address</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="address"
-          [(ngModel)]="order.address"
-          required
-        />
-        <span *ngIf="submitted && address.invalid" class="text-danger"
-          >Please type in your address
-        </span>
-      </div>
-      <div class="form-group">
-        <label class="text-light">City</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="city"
-          [(ngModel)]="order.city"
-          required
-        />
-        <span *ngIf="submitted && city.invalid" class="text-danger"
-          >Please type in your city
-        </span>
-      </div>
-      <div class="form-group">
-        <label class="text-light">State</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="state"
-          [(ngModel)]="order.state"
-          required
-        />
-        <span *ngIf="submitted && state.invalid" class="text-danger"
-          >Please type in your state
-        </span>
-      </div>
-      <div class="form-group">
-        <label class="text-light">Zip</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="zip"
-          [(ngModel)]="order.zip"
-          required
-        />
-        <span *ngIf="submitted && zip.invalid" class="text-danger"
-          >Please type in your zip
-        </span>
-      </div>
-      <div class="form-group">
-        <label class="text-light">Country</label>
-        <input
-          class="form-control"
-          #name="ngModel"
-          name="country"
-          [(ngModel)]="order.country"
-          required
-        />
-        <span *ngIf="submitted && country.invalid" class="text-danger"
-          >Please type in your country
-        </span>
-      </div>
-      <div class="text-center">
-        <button class="btn btn-outline-dark btn-warning m-1" routerLink="/cart">Return</button>
-        <button class="btn btn-outline-dark bg-success m-1" type="submit">
-          Complete Order
-        </button>
-      </div>
-    </form>
-  </div>
+    </div>
+    <div class="form-group">
+      <label class="text-light">Address</label>
+      <input
+        class="form-control"
+        #address="ngModel"
+        name="address"
+        [(ngModel)]="order.address"
+        required
+      />
+      <span *ngIf="submitted && address.invalid" class="text-danger"
+        >Please type in your address
+      </span>
+    </div>
+    <div class="form-group">
+      <label class="text-light">City</label>
+      <input
+        class="form-control"
+        #city="ngModel"
+        name="city"
+        [(ngModel)]="order.city"
+        required
+      />
+      <span *ngIf="submitted && city.invalid" class="text-danger"
+        >Please type in your city
+      </span>
+    </div>
+    <div class="form-group">
+      <label class="text-light">State</label>
+      <input
+        class="form-control"
+        #state="ngModel"
+        name="state"
+        [(ngModel)]="order.state"
+        required
+      />
+      <span *ngIf="submitted && state.invalid" class="text-danger"
+        >Please type in your state
+      </span>
+    </div>
+    <div class="form-group">
+      <label class="text-light">Zip</label>
+      <input
+        class="form-control"
+        #zip="ngModel"
+        name="zip"
+        [(ngModel)]="order.zip"
+        required
+      />
+      <span *ngIf="submitted && zip.invalid" class="text-danger"
+        >Please type in your zip
+      </span>
+    </div>
+    <div class="form-group">
+      <label class="text-light">Country</label>
+      <input
+        class="form-control"
+        #country="ngModel"
+        name="country"
+        [(ngModel)]="order.country"
+        required
+      />
+      <span *ngIf="submitted && country.invalid" class="text-danger"
+        >Please type in your country
+      </span>
+    </div>
+    <div class="text-center">
+      <button class="btn btn-outline-dark btn-warning m-1" routerLink="/cart">
+        Return
+      </button>
+      <button class="btn btn-outline-dark bg-success m-1" type="submit">
+        Complete Order
+      </button>
+    </div>
+  </form>
 </div>
