--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -24,7 +24,7 @@
       >
         {{ category }}
       </button>
-      <button class="btn btn-block btn-danger" routerLink="/admin">lolololololol</button>
+      <button class="btn btn-block btn-danger" routerLink="/admin">Admin</button>
     </div>
 
     <div class="col-9 p-2">
