switching project to a MySQL database

--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-9 p-2">
-      <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
+      <div *ngFor="let product of paginatedProducts" class="card m-1 p-1 bg-light">
         <h4>
           {{ product.name }}
           <span class="badge badge-pill badge-success float-right">
