database connection done, services done, working on update and create

--- a/src/app/admin/productTable.component.html
+++ b/src/app/admin/productTable.component.html
@@ -21,7 +21,7 @@
         >
           Edit
         </button>
-        <button class="btn btn-sm -btn-danger" (click)="deleteProduct(p.id)">
+        <button class="btn btn-sm -btn-danger" (click)="deleteProduct(p)">
           Delete
         </button>
       </td>
